tests/tests/checks/snapshots/check_glob@cpp__big_cpp_cpp__include_big_header__html.snap
---
source: tests/test_check_insta.rs
expression: "&aggr_str"

---
<div role="row" id="line-20" class="source-line-with-number">
  <div role="cell" class="line-number" data-line-number="20"></div>
  <code role="cell" class="source-line"><span class="syn_reserved" >#include</span> <span class="syn_string" data-symbols="FILE_big_header@2Eh" data-i="0" >"big_header.h"</span>
</code>
</div>

