tests/tests/checks/snapshots/check_glob@cpp__big_cpp_cpp__include_big_header__prodhtml.snap
---
source: tests/test_check_insta.rs
expression: "&aggr_str"

---
<div role="row" id="line-NORM" class="source-line-with-number">
  <div role="cell"><div class="cov-strip cov-no-data"></div></div>
  <div role="cell"><div class="blame-strip"></div></div>
  <div role="cell" class="line-number" data-line-number="NORM"></div>
  <code role="cell" class="source-line"><span class="syn_reserved" >#include</span> <span class="syn_string" data-symbols="FILE_big_header@2Eh" data-i="NORM">"big_header.h"</span>
</code>
</div>

